fixed overlap of cards and modal

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@
 #modal {
   display: none;
   position: absolute;
+  width: 600px;
+  height: 800px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -85,6 +87,7 @@
   padding: 1rem;
   border-radius: 0.25rem;
   background-color: white;
+
 }
 
 #overlay {
